# kickWarehouseSim

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: build_and_coveralls.yml
robot_manager/: CMakeLists.txt  README.md  package.xml
robot_manager/config/: waypoints.yaml
robot_manager/include/robot_manager/: nav_action_client.hpp  robot_manager.hpp
robot_manager/launch/: .robot_manager.launch.py.swp  robot_manager.launch.py  test_robot_manager.launch.py
robot_manager/src/: main.cpp  minimal_action_client.cpp  nav_action_client.cpp  robot_manager.cpp  test_nav_action_client.cpp
robot_manager/test/: main.cpp  test_nav_action_client.cpp  test_robot_manager.cpp
robot_manager_msgs/: CMakeLists.txt  package.xml
robot_manager_msgs/srv/: SetRoutine.srv
robot_model/: CMakeLists.txt  README.md  package.xml
robot_model/launch/: robot_model.launch.py  robot_model_gps.launch.py  rviz2.launch.py  warehouse_bot.launch.py
robot_model/maps/: test.pgm  test.yaml  warehouse_map.pgm  warehouse_map.yaml  warehouse_map_2.pgm  warehouse_map_2_serialized.data  warehouse_map_3.pgm  warehouse_map_4.pgm  warehouse_map_4.yaml
robot_model/meshes/: Front_Right_Wheel.STL  IMU.STL
robot_model/models/: office_bot_v5.urdf  office_bot_v6.urdf
robot_model/models/robot_description_v5/: model.config  model.sdf
robot_model/models/robot_description_v5/meshes/: Back_Left_Wheel.STL  base_link.STL
robot_model/models/robot_description_v6/: model.config  model.sdf
robot_model/models/robot_description_v6/meshes1/: Back_Right_Wheel.STL  Front_Left_Wheel.STL  UT_Sensors.STL
robot_model/params/: ekf_test.yaml
robot_model/rviz/: urdf_config.rviz  urdf_config_with_model.rviz
robot_model/worlds/: office.world  smalltown.world
warehouse_simulation/: CMakeLists.txt  README.md  package.xml
warehouse_simulation/launch/: empty_warehouse.launch.py  rviz2.launch.py  warehouse_simulation.launch.py
warehouse_simulation/maps/: half_map.data  warehouse_map_2.yaml  warehouse_map_3.yaml  warehouse_map_4_serialized.data
warehouse_simulation/models/box_pallets_3/: model.sdf
warehouse_simulation/models/warehouse/: model.config  model.sdf
warehouse_simulation/models/warehouse_ground/: model.config  model.sdf
warehouse_simulation/models/warehouse_ground/materials/scripts/: warehouse_ground.material
warehouse_simulation/models/warehouse_wall/: model.config  model.sdf
warehouse_simulation/models/warehouse_wall/materials/scripts/: warehouse_wall.material
warehouse_simulation/rviz/: mapping_and_navigation.rviz
warehouse_simulation/src/: spawner.cpp  trial.cpp  warehouse.cpp
warehouse_simulation/worlds/: warehouse.world  warehouse_base_tmp.world
