<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_manager</name>
  <version>0.0.0</version>
  <description>A control interface for controlling warehouse bot</description>
  <maintainer email="longhongc@gmail.com">Chang-Hong Chen</maintainer>
  <license>BSDv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_tutorials_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
